--- a/Entity_DBAccess/appsettings.json
+++ b/Entity_DBAccess/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ServerConnection": "(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\vbuec\\OneDrive\\Documentos\\MoviesDB.mdf;Integrated Security=True;Connect Timeout=30;Trustedd_Connection=true;"
+    "ServerConnection": "(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\vbuec\\OneDrive\\Documentos\\MoviesDB.mdf;Integrated Security=True;Connect Timeout=30;Trusted_Connection=true;"
   },
 
   "Logging": {
